<resources>
    <string name="app_name">Lesson2</string>
    <string name="ce">CE</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_star">*</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_minus">-</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_plus">+</string>
    <string name="key_dot">.</string>
    <string name="key_0">0</string>
    <string name="key_equally">=</string>
    <string name="todo">TODO</string>
    <string name="bracket_left">(</string>
    <string name="bracket_right">)</string>
    <string name="key_division">/</string>
</resources>